# mwispy

./: LICENSE  README.md  pyproject.toml
DBSCAN/: mwispDBSCANV5dev.py  myPYTHON.py  runDBSCANexample.py  testQ3_rms.fits
cubeView/: cubeViewV5.py  runCubeViewExample.py
export/: exportFullResFigure
src/mwispy/: __init__.py  converter.py  cubemoment.py  datacube.py  mosaic.py  pvslice.py  tile.py
src/mwispy.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
