[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "mwispy"
version = "1.0.5"
authors = [
  { name="Shaobo Zhang", email="shbzhang@pmo.ac.cn" },
]
description = "Tools for MWISP data reduction."
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    "numpy >= 1.21.0",
    "scipy >= 1.7.0",
    "matplotlib >= 3.4.0",
    "astropy >= 4.3",
    "spectral_cube >= 0.6.2",
    "tqdm >= 4.62.0",
]

[project.urls]
"Homepage" = "https://github.com/shbzhang/mwispy"
